# mensura

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
.github/workflows/: book.yml  ci.yml
book/: book.toml  mensura-highlight.css
book/src/: SUMMARY.md  introduction.md  whats-next.md
book/src/concepts/: the-kernel.md  what-the-types-track.md
book/src/examples/: enum-status.mensura  first-store.mensura  optional-values.mensura  scalar-types.mensura  shape-conformance.mensura  store-machines.mensura  templated-shape.mensura  unit-course.mensura  unit-person.mensura
book/src/getting-started/: checking-and-running.md  first-store.md  installation.md
book/src/modelling/: scalar-types.md  shapes.md  stores.md  units.md
crates/mensura-cli/: Cargo.toml
crates/mensura-cli/src/: main.rs
crates/mensura-cli/tests/: corpus.rs  examples.rs
crates/mensura-cli/tests/corpus/: README.md
crates/mensura-cli/tests/corpus/accept/: optional_attribute.mensura  scalar_domains.mensura  shape_conformance.mensura  templated_shape.mensura  units_and_stores.mensura  view_summary.mensura
crates/mensura-cli/tests/corpus/reject/: domain_not_supported.mensura  empty_enum.mensura  missing_colon.mensura  non_snake_store.mensura  optional_index_field.mensura  real_index.mensura  view_scalar_on_bag.mensura
crates/mensura-highlight/: Cargo.toml
crates/mensura-highlight/src/: lib.rs
crates/mensura-lsp/: Cargo.toml
crates/mensura-lsp/src/: analysis.rs  lib.rs  line_index.rs
crates/mensura-mdbook/: Cargo.toml
crates/mensura-mdbook/src/: main.rs  render.rs
crates/mensura-runtime/: Cargo.toml
crates/mensura-runtime/src/: backend.rs  lib.rs  sqlite.rs
crates/mensura-syntax/: Cargo.toml
crates/mensura-syntax/src/: ast.rs  expr.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/mensura-types/: Cargo.toml
crates/mensura-types/src/: expr_check.rs  lib.rs  model.rs  pipe_check.rs  resolve.rs  table.rs
docs/decisions/: 0001-unit-as-identity-discipline.md  0002-stores-tabulate-units.md  0003-shapes-as-structural-contracts.md  0004-qualifier-mechanism.md  0005-identity-and-authorization.md  0005-lexer-trivia-channel.md  0006-transport-agnostic-surface.md  0007-lexer-trivia-channel.md  0007-single-expression-sublanguage.md  0008-formalize-algebra-in-lean.md  0009-lexer-trivia-channel.md  0009-pipeline-surface.md  0010-attribute-totality.md  0011-lexer-trivia-channel.md  0012-view-hosting.md  0013-qualifier-scope-and-the-content-boundary.md  0014-scalar-domain-taxonomy.md  0015-map-row-multiset-and-key-first-lambdas.md
docs/examples/: college-stores.mensura  fleet-monitoring.mensura
docs/language/: 00-overview.md  01-units.md  02-stores.md  03-shapes.md  04-grammar.md  05-naming-and-casing.md  06-expressions.md  07-pipelines.md  08-lineage.md  09-typing-reference.md  10-views.md
docs/toolkit/: 00-storage-backend.md  02-lsp.md  03-book-highlighting.md  03-storage-backend.md
formal/: Mensura.lean  lake-manifest.json  lakefile.toml
formal/Mensura/: Completeness.lean  Table.lean
