[workspace]
resolver = "2"
members = [
    "crates/mensura-syntax",
    "crates/mensura-types",
    "crates/mensura-runtime",
    "crates/mensura-highlight",
    "crates/mensura-lsp",
    "crates/mensura-mdbook",
    "crates/mensura-cli",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mensura-lang/mensura"

[workspace.dependencies]
mensura-syntax = { path = "crates/mensura-syntax" }
mensura-types = { path = "crates/mensura-types" }
mensura-runtime = { path = "crates/mensura-runtime" }
mensura-highlight = { path = "crates/mensura-highlight" }
mensura-lsp = { path = "crates/mensura-lsp" }
unicode-xid = "0.2"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
