[package]
name = "mensura-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The `mensura lsp` language server backend."

[dependencies]
mensura-syntax = { workspace = true }
mensura-types = { workspace = true }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde_json = { workspace = true }
