[package]
name = "mensura-mdbook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "An mdBook preprocessor that highlights and check-gates Mensura code blocks."

[[bin]]
name = "mdbook-mensura"
path = "src/main.rs"

[dependencies]
mensura-highlight = { workspace = true }
serde_json = { workspace = true }
