[package]
name = "mensura-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime storage backends for Mensura stores."

[dependencies]
mensura-types = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
mensura-syntax = { workspace = true }
